; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_freezer.c___thaw_process.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_freezer.c___thaw_process.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.task_struct = type { i32 }

@PF_FROZEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.task_struct*)* @__thaw_process to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__thaw_process(%struct.task_struct* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.task_struct*, align 8
  store %struct.task_struct* %0, %struct.task_struct** %3, align 8
  %4 = load %struct.task_struct*, %struct.task_struct** %3, align 8
  %5 = call i64 @frozen(%struct.task_struct* %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %14

7:                                                ; preds = %1
  %8 = load i32, i32* @PF_FROZEN, align 4
  %9 = xor i32 %8, -1
  %10 = load %struct.task_struct*, %struct.task_struct** %3, align 8
  %11 = getelementptr inbounds %struct.task_struct, %struct.task_struct* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = and i32 %12, %9
  store i32 %13, i32* %11, align 4
  store i32 1, i32* %2, align 4
  br label %17

14:                                               ; preds = %1
  %15 = load %struct.task_struct*, %struct.task_struct** %3, align 8
  %16 = call i32 @clear_freeze_flag(%struct.task_struct* %15)
  store i32 0, i32* %2, align 4
  br label %17

17:                                               ; preds = %14, %7
  %18 = load i32, i32* %2, align 4
  ret i32 %18
}

declare dso_local i64 @frozen(%struct.task_struct*) #1

declare dso_local i32 @clear_freeze_flag(%struct.task_struct*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
